# next-im-backend

./: .env  .gitignore  Cargo.toml
abi/: Cargo.toml  build.rs
abi/protos/: messages.proto
abi/src/: config.rs  error.rs  lib.rs  log.rs  message.rs  utils.rs
abi/src/codec/: mod.rs
abi/src/message/: common.rs  mod.rs  tcp.rs
abi/src/message/platform/: mod.rs
abi/src/pb/: message.rs  mod.rs  session.rs
abi/src/pb/hepler/: chat_msg_builder.rs  mod.rs
abi/src/stream/: mod.rs  tcp.rs
api/: Cargo.toml
api/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
api/src/handlers/: mod.rs
api/src/handlers/admin/: handlers.rs  mod.rs  model.rs
api/src/handlers/users/: handlers.rs  mod.rs  model.rs
cache/: Cargo.toml
cache/src/: lib.rs  redis_impl.rs
chat/: Cargo.toml
chat/src/: lib.rs  main.rs
client/: Cargo.toml
client/src/: error.rs  lib.rs  main.rs
connect/: Cargo.toml
connect/src/: client.rs  error.rs  lib.rs  main.rs  manager.rs  rpc.rs  session.rs
connect/src/api/: http.rs  mod.rs
connect/src/stream/: mod.rs
db/: Cargo.toml
db/src/: lib.rs  main.rs  msg.rs  rpc.rs  seq.rs
db/src/database/: mod.rs  msg.rs  seq.rs
db/src/database/seq/: mod.rs
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/msg/: mod.rs  model.rs
entity/src/seq/: mod.rs  model.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241204_153833_add_seq.rs  m20241224_013252_create_msg.rs
migrations/: 20240613030813_seq.down.sql  20240613030813_seq.up.sql
msg-gateway/: Cargo.toml
msg-gateway/src/: client.rs  error.rs  lib.rs  main.rs  manager.rs  rpc.rs  tcp.rs
msg-server/: Cargo.toml
msg-server/src/: chat.rs  consumer.rs  error.rs  lib.rs  main.rs
msg-server/src/pusher/: mod.rs  service.rs
rfcs/: db.md  tcp stream.md  动态服务发现.md  客户端通信.md  接口消息时序.md  接口消息服务.md  服务器.md  架构设计.md  模板.md  注册中心.md  注册中心与动态发现.md  消息.md  消息序列号.md  消息通信时序.md  聊天服务.md  连接服务.md  需求分析.md
seq/: Cargo.toml
seq/src/: error.rs  lib.rs  rpc.rs  session.rs
seq/src/store/: mod.rs
server/: Cargo.toml
server/src/: error.rs  main.rs  manager.rs  rpc.rs
utils/: Cargo.toml
utils/src/: client_factory.rs  error.rs  lib.rs  service_resolver.rs
utils/src/helpers/: mod.rs
utils/src/service_discovery/: mod.rs  tonic_service_discovery.rs
utils/src/service_register/: mod.rs
utils/src/service_register_center/: consul.rs  mod.rs
