[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7", features = ["codec"] }
tonic = { version = "0.12"}
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.37", features = ["full"] }
dashmap = { version = "5.3" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
bytes = { version = "1.6" }
futures = { version = "0.3" }
thiserror = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
nanoid = { version = "0.4" }
reqwest = { version = "0.12.2", features = ["json"] }
async-trait = { version = "0.1" }
sea-orm = { version = "1.1", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
redis = { version = "0.27", features = ["tokio-comp"] }
nacos-tonic-discover = { git = "https://github.com/zuiyu1998/nacos_rust_client.git" }
nacos_rust_client = { git = "https://github.com/zuiyu1998/nacos_rust_client.git" }

[build-dependencies]
tonic-build = "0.12.0"
