[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { path = "../abi" }
cache = { path = "../cache" }

thiserror = { version = "1.0" }
axum = { version = "0.7" }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
