[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
entity = { version = "0.1.0", path = "../entity" }
migration = { version = "0.1.0", path = "../migration" }
utils = { path = "../utils" }