[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }

synapse = { git = "https://github.com/Xu-Mj/synapse.git", branch = "main" }
thiserror = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
http = "0.2.12"
tower = "0.4.13"
hostname = "0.4"
